Fixed node stats bottom spacing.

--- a/EXTRA.css
+++ b/EXTRA.css
@@ -367,10 +367,6 @@ ol ol {
 .list-inline > li:first-child {
   padding-left: 0;
 }
-dl {
-  margin-top: 0;
-  margin-bottom: 20px;
-}
 dt,
 dd {
   line-height: 1.428571429;
